# devops-ci

./: Cargo.toml  LICENSE  README.md  index.html  index.scss
.github/workflows/: build.yml
src/: app.rs
src/components/: counter.rs
