[package]
name = "rust-interactive-hello-world"
version = "1.0.0-beta.1"
edition = "2021"
description = "A simple Hello-World with a bit more interactivity."
readme = "README.md"
repository = "https://github.com/shiipou/rust-interactive-hello-world"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
